Added font, card and some other styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div id="card">
                 <div class="card__item">
                     <div class="card__label">
                         <span class="label" id="label__decode">Decode</span>
